--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "1.9.3",
     "axios": "1.3.4",
     "react": "18.2.0",
+    "react-hook-form": "7.51.3",
     "react-native": "0.71.3",
     "react-native-config": "^1.5.1",
     "react-native-element-dropdown": "^2.10.2",
