--- a/package.json
+++ b/package.json
@@ -6,51 +6,52 @@
     "android": "sh ./stg.sh",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "npx react-native start",
-    "start-reset": "sh ./clear.sh && npx react-native start --reset-cache",
+    "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.22.3",
-    "@react-navigation/drawer": "6.3.3",
-    "@react-navigation/native": "6.1.6",
-    "@react-navigation/native-stack": "6.9.12",
-    "@react-navigation/stack": "6.3.16",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/drawer": "6.6.15",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native-stack": "6.9.26",
+    "@react-navigation/stack": "6.3.29",
     "@reduxjs/toolkit": "1.9.3",
-    "axios": "1.3.4",
+    "axios": "1.6.8",
     "react": "18.2.0",
     "react-hook-form": "7.51.3",
-    "react-native": "0.71.3",
+    "react-native": "0.73.7",
     "react-native-config": "^1.5.1",
-    "react-native-element-dropdown": "^2.10.2",
-    "react-native-gesture-handler": "2.15.0",
-    "react-native-reanimated": "3.7.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "3.20.0",
+    "react-native-element-dropdown": "2.10.4",
+    "react-native-gesture-handler": "2.16.0",
+    "react-native-image-picker": "7.1.2",
+    "react-native-reanimated": "3.8.1",
+    "react-native-safe-area-context": "4.9.0",
+    "react-native-screens": "3.30.1",
     "react-native-uuid": "2.0.1",
     "react-redux": "8.0.5",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "7.21.3",
-    "@babel/preset-env": "7.20.2",
-    "@babel/runtime": "7.20.0",
-    "@react-native-community/eslint-config": "3.2.0",
-    "@tsconfig/react-native": "2.0.2",
-    "@types/jest": "29.2.1",
-    "@types/react": "18.0.24",
-    "@types/react-test-renderer": "18.0.0",
-    "babel-jest": "29.2.1",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "eslint": "8.19.0",
-    "jest": "29.2.1",
-    "metro-react-native-babel-preset": "0.73.7",
-    "prettier": "2.4.1",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
+    "@types/react": "^18.2.6",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "5.0.2",
+    "eslint": "^8.19.0",
+    "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "0.77.0",
+    "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "5.0.4"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=18"
   }
 }
