--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.606.0",
+    "@aws-sdk/lib-storage": "3.606.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "6.6.15",
     "@react-navigation/native": "6.1.17",
@@ -17,20 +19,24 @@
     "@react-navigation/stack": "6.3.29",
     "@reduxjs/toolkit": "1.9.3",
     "axios": "1.6.8",
+    "buffer": "6.0.3",
     "react": "18.2.0",
     "react-hook-form": "7.51.3",
     "react-native": "0.73.7",
     "react-native-config": "^1.5.1",
     "react-native-element-dropdown": "2.10.4",
     "react-native-gesture-handler": "2.16.0",
+    "react-native-get-random-values": "1.11.0",
     "react-native-image-picker": "7.1.2",
     "react-native-reanimated": "3.8.1",
     "react-native-safe-area-context": "4.9.0",
     "react-native-screens": "3.30.1",
+    "react-native-url-polyfill": "2.0.0",
     "react-native-uuid": "2.0.1",
     "react-redux": "8.0.5",
     "redux": "4.2.1",
-    "redux-thunk": "2.4.2"
+    "redux-thunk": "2.4.2",
+    "rn-fetch-blob": "0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
