--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "18.2.0",
     "react-hook-form": "7.51.3",
     "react-native": "0.73.7",
-    "react-native-config": "^1.5.1",
+    "react-native-config": "1.5.1",
     "react-native-element-dropdown": "2.10.4",
     "react-native-gesture-handler": "2.16.0",
     "react-native-get-random-values": "1.11.0",
