--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.73.7",
     "react-native-config": "1.5.1",
     "react-native-element-dropdown": "2.10.4",
+    "react-native-fast-image": "8.6.3",
     "react-native-gesture-handler": "2.16.0",
     "react-native-get-random-values": "1.11.0",
     "react-native-image-picker": "7.1.2",
