--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "6.9.26",
     "@react-navigation/stack": "6.3.29",
     "@reduxjs/toolkit": "1.9.3",
+    "@tillpos/xml-escpos-helper": "0.3.1",
     "axios": "1.6.8",
     "buffer": "6.0.3",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "react-native-reanimated": "3.8.1",
     "react-native-safe-area-context": "4.9.0",
     "react-native-screens": "3.30.1",
+    "react-native-tcp-socket": "6.2.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-uuid": "2.0.1",
     "react-redux": "8.0.5",
@@ -60,5 +62,9 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "react-native": {
+    "net": "react-native-tcp-socket"
   }
+
 }
