--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "3.606.0",
     "@aws-sdk/lib-storage": "3.606.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/drawer": "6.6.15",
     "@react-navigation/native": "6.1.17",
     "@react-navigation/native-stack": "6.9.26",
@@ -66,5 +67,4 @@
   "react-native": {
     "net": "react-native-tcp-socket"
   }
-
 }
