--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "release": "sh ./release.sh"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.606.0",
