--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-redux": "8.0.5",
     "redux": "4.2.1",
     "redux-thunk": "2.4.2",
-    "rn-fetch-blob": "0.12.0"
+    "rn-fetch-blob": "0.12.0",
+    "safe-stringify": "1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
